<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout style="@style/QuestionLayout">

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/ans_field"
            style="@style/EditTextLayout"
            android:hint="@string/ans" />

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_2" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup2"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_2_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_2_ans_1" />

                <RadioButton
                    android:id="@+id/ques_2_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_2_ans_2" />

                <RadioButton
                    android:id="@+id/ques_2_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_2_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_3" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup3"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_3_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_3_ans_1" />

                <RadioButton
                    android:id="@+id/ques_3_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_3_ans_2" />

                <RadioButton
                    android:id="@+id/ques_3_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_3_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_4" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup4"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_4_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_4_ans_1" />

                <RadioButton
                    android:id="@+id/ques_4_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_4_ans_2" />

                <RadioButton
                    android:id="@+id/ques_4_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_4_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_5" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup5"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_5_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_5_ans_1" />

                <RadioButton
                    android:id="@+id/ques_5_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_5_ans_2" />

                <RadioButton
                    android:id="@+id/ques_5_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_5_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_6" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup6"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_6_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_6_ans_1" />

                <RadioButton
                    android:id="@+id/ques_6_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_6_ans_2" />

                <RadioButton
                    android:id="@+id/ques_6_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_6_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_7" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup7"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_7_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_7_ans_1" />

                <RadioButton
                    android:id="@+id/ques_7_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_7_ans_2" />

                <RadioButton
                    android:id="@+id/ques_7_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_7_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_8" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup8"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_8_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_8_ans_1" />

                <RadioButton
                    android:id="@+id/ques_8_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_8_ans_2" />

                <RadioButton
                    android:id="@+id/ques_8_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_8_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_9" />

        <LinearLayout style="@style/ButtonLayout">

            <RadioGroup
                android:id="@+id/radiogroup9"
                style="@style/RadioGroupLayout">

                <RadioButton
                    android:id="@+id/ques_9_radiobutton_1"
                    style="@style/AnsButton"
                    android:text="@string/ques_9_ans_1" />

                <RadioButton
                    android:id="@+id/ques_9_radiobutton_2"
                    style="@style/AnsButton"
                    android:text="@string/ques_9_ans_2" />

                <RadioButton
                    android:id="@+id/ques_9_radiobutton_3"
                    style="@style/AnsButton"
                    android:text="@string/ques_9_ans_3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:text="@string/question_10" />

        <LinearLayout style="@style/ButtonLayout">

            <CheckBox
                android:id="@+id/ques_10_checkbutton_1"
                style="@style/AnsButton"
                android:text="@string/ques_10_ans_1" />

            <CheckBox
                android:id="@+id/ques_10_checkbutton_2"
                style="@style/AnsButton"
                android:text="@string/ques_10_ans_2" />

            <CheckBox
                android:id="@+id/ques_10_checkbutton_3"
                style="@style/AnsButton"
                android:text="@string/ques_10_ans_3" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            style="@style/ButtonStyle"
            android:onClick="submitButton"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/reset"
            style="@style/ButtonStyle"
            android:layout_marginBottom="16dp"
            android:onClick="resetButton"
            android:text="@string/reset_button" />
    </LinearLayout>
</ScrollView>
